# eoj-reboot

./: .firebaserc  .gitignore  CLAUDE.md  EOJR_Card.md  EOJR_Rulebook.md  README.md  cards.json  cards.schema.json  firebase.json  firestore.rules  generate_card_md.py  generate_cards.py  index.html  justfile  package-lock.json  package.json  print-kit-0718-clean.html  print-kit-0718.html  run-sim.ts  sim-results-v2-before-rerun.json  sim-results-v2-prev.json  sim-results-v2.json  sim-results.json  simulation-report.docx  temp-cards.json  tsconfig.json  vite.config.ts  異能学園総選挙_dev_briefing.md
.github/: depandabot.yml
card-gen/: generate_card_md.py  generate_cards.py  pyproject.toml
data/: card-change-history.json  card-review-notes.json  cards-testkit.json  cards.json  cards.schema.json  rulebook.md
docs/: EOJR_Rulebook.md  IMPLEMENTATION_STATUS.md  README.md  attribute-migration-draft.md  balance-overview.md  balance-roadmap.md  card-audit-draft.md  card-audit-table.md  card-list-2026-03-22T03-13-17.docx  card-list-2026-03-22T05-07-00.docx  card-list.docx  card-text-style-guide.md  cardlist-0718.md  cardlist.docx  cards.md  cc-handoff-0718-print-kit.md  claude-balance-review-brief.md  claude-balance-review-prompt.md  codex-task-deck-rules-v0.md  codex-task-era-paper.md  codex-task-phase0-spec-sync.md  codex-task-phase2a-freeze.md  codex-task-phase2a-main-search.md  codex-task-phase2b-item-layer.md  codex-task-phase2d-rotate-attack.md  codex-task-phase3-shape-pricing.md  codex-task-print-kit-check.md  codex-task-pure-vanilla-calibration.md  codex-task-shapes-0718-m.md  (+36 more)
(+163 files in other folders)
